# garlic-models

./: .gitignore  .nvimrc  CMakeLists.txt  README.md  adapters_2libyaml_2error_8h_source.html  allocators_8h_source.html  annotated.html  annotated_dup.js  classGarlicError.html  classes.html  classgarlic_1_1Constraint.html  classgarlic_1_1Constraint.js  classgarlic_1_1Field.html  classgarlic_1_1Field.js  classgarlic_1_1ForwardIterator.html  classgarlic_1_1ForwardIterator.js  classgarlic_1_1IteratorWrapper.html  classgarlic_1_1Model.html  classgarlic_1_1Model.js  classgarlic_1_1Module.html  classgarlic_1_1Module.js  classgarlic_1_1RandomAccessIterator.html  classgarlic_1_1RandomAccessIterator.js  classgarlic_1_1RefLayer.html  classgarlic_1_1ViewLayer.html  classgarlic_1_1adapters_1_1libyaml_1_1YamlDocument.html  classgarlic_1_1adapters_1_1libyaml_1_1YamlDocument.js  classgarlic_1_1adapters_1_1libyaml_1_1YamlView.html  classgarlic_1_1adapters_1_1rapidjson_1_1LayerHandler.html  classgarlic_1_1back__inserter__iterator.html  classgarlic_1_1basic__text.html  classgarlic_1_1lazy__string__splitter.html  classgarlic_1_1lazy__string__splitter.js  classgarlic_1_1map__tag.html  classgarlic_1_1sequence.html  classgarlic_1_1sequence.js  classgarlic_1_1tuple__tag.html  clove_8h.html  clove_8h.js  clove_8h__dep__incl.map  (+178 more)
.github/workflows/: build_dev_images.yaml  pr.yaml  update-docs.yaml
cmake/: Config.cmake.in
docker/: Dockerfile  Makefile  docker-compose.yml
docker/gcc/: Dockerfile
docs/: Doxyfile  header.html
docs/pages/: Encoding.md  Layer.md  ModuleParsing.md  Validation.md
include/: garlic.h
include/garlic/: allocators.h  base_values.h  basic.h  clove.h  constraints.h  containers.h  encoding.h  error.h  flat_constraints.h  flat_module.h  garlic.h  json.h  layer.h  meta.h  models.h  module.h  stream.h  utility.h
include/garlic/adapters/: libyaml.h  rapidjson.h  yaml-cpp.h
include/garlic/adapters/libyaml/: document.h  emitter.h  error.h  experimental.h  internal.h  layer.h  parser.h
include/garlic/adapters/rapidjson/: document.h  reader.h  writer.h
include/garlic/parsing/: constraints.h  flat_constraints.h  module.h  numbers.h
include/garlic/providers/: libyaml.h  rapidjson.h  yaml-cpp.h
include/garlic/providers/libyaml/: layer.h  parser.h
lib/tinydir/: tinydir.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+34 more)
src/: CMakeLists.txt  garlic.cpp
tests/: CMakeLists.txt  all_tests.cpp  lab.cpp  main.cpp  performance.cpp  test_basic.cpp  test_clove.cpp  test_constraints.cpp  test_containers.cpp  test_default_values.cpp  test_encoding.cpp  test_helpers.cpp  test_json.cpp  test_models.cpp  test_module.cpp  test_module_parsing.cpp  test_protocol.h  test_utility.cpp  test_utility.h  test_yaml.cpp  utility.h
tests/adapters/libyaml/: CMakeLists.txt  test_yaml.cpp
tests/adapters/rapidjson/: CMakeLists.txt  performance.cpp  test_json.cpp
tests/data/: any.yaml  basic_module.json  basic_module.yaml  forward_fields.json  models.json  models.yml  test.json  test.yaml
tests/data/basic/: module.json  module.yaml
tests/data/constraint/: bad1.json  module.yaml
tests/data/field_constraint/: bad1.json  bad2.json  good.json  module.yaml
tests/data/forward_fields/: module.json
tests/data/model_inheritance/: lazy_load.yaml  module.yaml
tests/data/optional_fields/: bad1.json  bad2.json  bad3.json  good1.json  good2.json  good3.json  module.yaml
tests/data/performance/: module.yaml  test1.json
tests/data/resolve/: file.json  file.yaml
tests/data/special_constraints/: all_bad1.json  all_bad2.json  all_good1.json  any_bad1.json  any_good1.json  any_good2.json  list_bad1.json  list_bad2.json  list_good1.json  literal_bad1.json  literal_good1.json  map_bad1.json  map_bad2.json  map_bad3.json  map_good1.json  module.yaml  tuple_bad1.json  tuple_bad2.json  tuple_bad3.json  tuple_bad4.json  tuple_bad5.json  tuple_bad6.json  tuple_good1.json  tuple_good2.json
tests/providers/: CMakeLists.txt
tests/providers/libyaml/: test_yaml.cpp
tests/providers/rapidjson/: CMakeLists.txt  performance.cpp  test_json.cpp
